@@ -63,14 +63,11 @@ AC_DEFUN(AC_CHECK_PLUGIN_SUPPORT,
             SHLIB_LD="ld -shared"
         fi
         ;;
-      FreeBSD-1*)
+      FreeBSD-1.*)
         dnl It sucks that I to have to do this.
         AC_MSG_ERROR(sorry, no plugins on $ac_cv_system_version)
         ;;
-      FreeBSD-2.2*)
-        SHLIB_LD="ld -Bshareable"
-        ;;
-      FreeBSD-2*)
+      FreeBSD-2.*)
         SHLIB_LD="ld -Bshareable"
         ;;
       FreeBSD*)
